--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
-                <h1 class="banne-title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact Me</button>
             </div>
@@ -41,7 +41,14 @@
         </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that
+                provide real value to the end user. Thousands of clients have procured exceptional results while working with me.
+                Delivering work within time and budget which meets clients requirements in our meta.
+            </p>
+        </section>
     </main>
     <footer>
         
